# winuxsh

./: $null  .gitignore  .winshrc.toml  Cargo.toml  README.md  build.rs  commands_classification.toml  winuxcmd_commands.txt
DOCS/: command-classification-best-practices.md  daemon-and-command-routing-implementation-plan.md
scripts/: import_bash_completion.ps1  setup-vendor.ps1  test_array.sh  test_config.sh  test_env.sh  test_ffi.sh  test_mvp6_comprehensive.sh  test_mvp6_final.sh  test_mvp6_full.sh  test_mvp6_simple.sh  test_script.sh
src/: array.rs  builtins.rs  command_router.rs  config.rs  error.rs  executor.rs  job.rs  main.rs  main_new.rs  main_old.rs  oh_my_winuxsh.rs  parser.rs  plugin.rs  shell.rs  theme.rs  tokenizer.rs  winuxcmd_ffi.rs
src/completion/: command.rs  completer.rs  mod.rs  path.rs  variables.rs
utils/: README.md
utils/winuxcmd/: ffi.h  winuxcmd.exp
winuxcmd/: create_links.ps1
