[package]
name = "mvp6-array"
version = "0.6.0"
edition = "2021"
description = "WinSH MVP6 - Array Support and Internationalization"

[dependencies]
reedline = "0.33"
shlex = "1.3"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
colored = "2.1"
log = "0.4"
env_logger = "0.11"
nu-ansi-term = "0.50"
glob = "0.3"

[dev-dependencies]
tempfile = "3.0"