[package]
name = "winuxsh"
version = "0.6.0"
edition = "2021"
description = "WinSH MVP6 - Array Support and Internationalization"

[dependencies]
reedline = { path = "vendor/reedline" }
shlex = "1.3"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
colored = "2.1"
log = "0.4"
env_logger = "0.11"
nu-ansi-term = "0.50"
glob = "0.3"
libloading = "0.8"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Console", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3.0"

[build-dependencies]
cc = "1.0"
